# blackjack-for-console-python

./: .gitignore  Makefile  card.py  conda_requirements.yaml  dealer.py  main.py  main.spec  main_part.py  owner.py  owner_part.py  player.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build-and-test.yml
Blackjack/: card.py  main.py  owner.py  player.py
__test__/: test_card.py  test_dealer.py  test_game_part.py  test_owner.py  test_player.py
src/: __main__.py  game.py  run.py
src/utils/: card.py  dealer.py  game.py  game_part.py  owner.py  player.py
src/utils/persons/: dealer.py  owner.py  player.py
tests/: test_dealer.py  test_owner.py  test_player.py
